# fasthtml-retro-os

./: .gitignore  .sesskey  desktop.py  fix_whitespace.py  main.py  makefile  performance-test.py  pyproject.toml  ruff.toml  style.css  test_main.py  validation_test.py
desktop/: components.py  services.py  state.py  ui_helpers.py
programs/ereader/: ereader.py  library.py  routes.py
programs/ereader/books/: frankenstein.txt
programs/game_of_life/: __init__.py  components.py  game.py  routes.py
programs/game_of_life/static/: game-manager.js
static/css/: style.css
static/js/: desktop-manager.js  desktop.js  ereader.js  highlights-viewer.js  settings-manager.js  window-manager.js
